--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>colegioreni</title>
 </head>
 <body>
- <p><Colégio Estadual Profa.
-    Reni Correia Gamper-EMPN
+ <p><h2>égio Estadual Profa.
+    Reni Correia Gamper-EMPN</h2>
  </p>   
 </body>
 </html>
