--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>colegioreni</title>
 </head>
 <body>
- <p><h2>égio Estadual Profa.
+ <p><h2>colégio Estadual Profa.
     Reni Correia Gamper-EMPN</h2>
+
  </p>   
 </body>
 </html>
