--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>colegioreni</title>
 </head>
 <body>
- <p><h2>colégio Estadual Profa.
-    Reni Correia Gamper-EMPN</h2>
-
+ <p><h1>colégio Estadual Profa.
+    Reni Correia Gamper-EMPN</h1>  
  </p>   
+ <h2>Rua</h2>
 </body>
 </html>
