--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
  <p><h1>colégio Estadual Profa.
     Reni Correia Gamper-EMPN</h1>  
  </p>   
- <h2>3Rua 1o de Maio, nº 100. Manoel Ribas - Paraná 
+ <h2>Rua 1o de Maio, nº 100. Manoel Ribas - Paraná 
 - Fone: (43) 3435-1332 - (43) 3435-2519
-CURSO TÉCNICO EM DESENVOLVIMENTO DE SISTEMAS
+<p>CURSO TÉCNICO EM DESENVOLVIMENTO DE SISTEMAS</p>
  </h2>
 </body>
 </html>
