--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </p>   
  <h2>Rua 1o de Maio, nº 100. Manoel Ribas - Paraná 
 - Fone: (43) 3435-1332 - (43) 3435-2519
-<p>CURSO TÉCNICO EM DESENVOLVIMENTO DE SISTEMAS</p>
+<p><n>CURSO TÉCNICO EM DESENVOLVIMENTO DE SISTEMAS</n></p>
  </h2>
  <h3><p>Em 1940 - Criação da primeira Instituição Escolar denominada: Escola Isolada de Campina Alta.</p>
    <p>Em 1946 - A partir deste ano a Escola passou a denominar-se: Escola Isolada da Colônia Manoel Ribas.</p> 
