--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>colegioreni</title>
 </head>
 <body>
- <p><h1>colégio Estadual Profa.
+ <p><h1>égio Estadual Profa.
     Reni Correia Gamper-EMPN</h1>  
  </p>   
  <h2>Rua 1o de Maio, nº 100. Manoel Ribas - Paraná 
@@ -19,9 +19,9 @@
    <p>Em 1981 - O Grupo Escolar passou a denominar-se: Escola Estadual "Profª Reni Correia Gamper" - Ensino de 1º Grau.</p> 
    <p> Em 1983 - Autorização para funcionamento do Ensino de 2º grau, que funcionava no Colégio Costa e Silva, que era mantido pela Prefeitura Municipal. Passou a denominar-se COLÉGIO ESTADUAL PROFESSORA RENI CORREIA GAMPER - ENSINO DE 1º e 2º GRAU, ofertando os Cursos: Magistério e Técnico em Contabilidade.</p>
    <p> Em 1993 - Com a Municipalização do Ensino de 1ª à 4ª séries do Ensino Fundamental, que passou a ser ofertado pela Escola Municipal Renato Siloto - Ensino Fundamental, o Colégio passou a denominar-se Colégio Est. Profª Reni Correia Gamper - Ensino de 2º Grau. Neste ano foi implantado o Curso de Educação Geral - Preparação Universal.</p>
-   <h1><p><hl>Colégio Estadual Profª Reni Correia Gamper </p> 
+   <h1><p><hr>Colégio Estadual Profª Reni Correia Gamper </p> 
    <p> Rua Primeiro de Maio nº 454.</p>
-  <p> Manoel Ribas - Paraná.</hl></p></h1> 
+  <p> Manoel Ribas - Paraná.</hr></p></h1> 
 </h3>
 </body>
 </html>
