--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>colegioreni</title>
 </head>
 <body>
- <p><h1>égio Estadual Profa.
+ <p><h1>colégio Estadual Profa.
     Reni Correia Gamper-EMPN</h1>  
  </p>   
  <h2>Rua 1o de Maio, nº 100. Manoel Ribas - Paraná 
