--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>colegioreni</title>
 </head>
 <body>
- <p><h1>colégio Estadual Profa.
+ <p><h1><hr>colégio Estadual Profa.
     Reni Correia Gamper-EMPN</h1>  
  </p>   
  <h2>Rua 1o de Maio, nº 100. Manoel Ribas - Paraná 
 - Fone: (43) 3435-1332 - (43) 3435-2519
-<p><hr>CURSO TÉCNICO EM DESENVOLVIMENTO DE SISTEMAS<hr></p>
+<p>CURSO TÉCNICO EM DESENVOLVIMENTO DE SISTEMAS<hr></p>
  </h2>
  <h3><p>1940 - Criação da primeira Instituição Escolar denominada: Escola Isolada de Campina Alta.</p>
    <p>Em 1946 - A partir deste ano a Escola passou a denominar-se: Escola Isolada da Colônia Manoel Ribas.</p> 
