--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <p><h1><hr>colégio Estadual Profa.
-    Reni Correia Gamper-EMPN</h1>  
- </p>   
- <h2>Rua 1o de Maio, nº 100. Manoel Ribas - Paraná 
-- Fone: (43) 3435-1332 - (43) 3435-2519
+  <hr>
+ <h1>colégio Estadual Profa. Reni Correia Gamper-EMPN</h1>  
+  
+ <h2>Rua 1o de Maio, nº 100. Manoel Ribas - Paraná - Fone: (43) 3435-1332 - (43) 3435-2519 </h2>
 <p>CURSO TÉCNICO EM DESENVOLVIMENTO DE SISTEMAS</p>
 <hr>
  <h3><p>1940 - Criação da primeira Instituição Escolar denominada: Escola Isolada de Campina Alta.</p>
