--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <p><i>Em 1947 -Passou a denominar-se: Escola Isolada da Vila Manoel Ribas. Em 1958 - Ocorreu nova mudança e então passou para a denominação de: Grupo Escolar "Professora Reni Correia Gamper" ; em homenagem a primeira professora contratada em 1940.</i></p>
     
    <p><i>Em 1981 - O Grupo Escolar passou a denominar-se: Escola Estadual Profª Reni Correia Gamper - Ensino de 1º Grau.</i> </p> 
-   <p> Em 1983 - Autorização para funcionamento do Ensino de 2º grau, que funcionava no Colégio Costa e Silva, que era mantido pela Prefeitura Municipal. Passou a denominar-se COLÉGIO ESTADUAL PROFESSORA RENI CORREIA GAMPER - ENSINO DE 1º e 2º GRAU, ofertando os Cursos: Magistério e Técnico em Contabilidade.</p>
-   <p> Em 1993 - Com a Municipalização do Ensino de 1ª à 4ª séries do Ensino Fundamental, que passou a ser ofertado pela Escola Municipal Renato Siloto - Ensino Fundamental, o Colégio passou a denominar-se Colégio Est. Profª Reni Correia Gamper - Ensino de 2º Grau. Neste ano foi implantado o Curso de Educação Geral - Preparação Universal.</p>
+   <p><i> Em 1983 - Autorização para funcionamento do Ensino de 2º grau, que funcionava no Colégio Costa e Silva, que era mantido pela Prefeitura Municipal. Passou a denominar-se COLÉGIO ESTADUAL PROFESSORA RENI CORREIA GAMPER - ENSINO DE 1º e 2º GRAU, ofertando os Cursos: Magistério e Técnico em Contabilidade.</i></p>
+   <p><i>Em 1993 - Com a Municipalização do Ensino de 1ª à 4ª séries do Ensino Fundamental, que passou a ser ofertado pela Escola Municipal Renato Siloto - Ensino Fundamental, o Colégio passou a denominar-se Colégio Est. Profª Reni Correia Gamper - Ensino de 2º Grau. Neste ano foi implantado o Curso de Educação Geral - Preparação Universal.</i> </p>
    <hr>
    <h4>Colégio Estadual Profª Reni Correia Gamper <br> 
         Rua Primeiro de Maio nº 454. <br>
